--- a/.docker.env.sample
+++ b/.docker.env.sample
@@ -1,9 +1,2 @@
-PHP_XDEBUG_DEFAULT_ENABLE=1
-PHP_XDEBUG_REMOTE_AUTOSTART=1
-PHP_XDEBUG_REMOTE_CONNECT_BACK=0
-PHP_XDEBUG_REMOTE_HOST=127.0.0.1
-PHP_XDEBUG_REMOTE_PORT=9001
-PHP_XDEBUG_REMOTE_ENABLE=1
-PHP_XDEBUG_IDEKEY=DOCKER_XDEBUG
-PHP_XDEBUG_PROFILER_ENABLE=0
-PHP_XDEBUG_PROFILER_OUTPUT_DIR=/var/www/html/logs
+PHP_XDEBUG_MODE=develop,debug
+PHP_XDEBUG_START_WITH_REQUEST=yes
