--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -11,13 +11,6 @@ opcache.interned_strings_buffer=16
 
 [xdebug]
 
-xdebug.default_enable=${PHP_XDEBUG_DEFAULT_ENABLE}
-xdebug.remote_autostart=${PHP_XDEBUG_REMOTE_AUTOSTART}
-xdebug.remote_connect_back=${PHP_XDEBUG_REMOTE_CONNECT_BACK}
-xdebug.remote_host=${PHP_XDEBUG_REMOTE_HOST}
-xdebug.remote_port=${PHP_XDEBUG_REMOTE_PORT}
-xdebug.remote_enable=${PHP_XDEBUG_REMOTE_ENABLE}
-xdebug.idekey=${PHP_XDEBUG_IDEKEY}
-
-xdebug.profiler_enable=${PHP_XDEBUG_PROFILER_ENABLE}
-xdebug.profiler_output_dir=${PHP_XDEBUG_PROFILER_OUTPUT_DIR}
+xdebug.mode=${PHP_XDEBUG_MODE}
+xdebug.start_with_request=${PHP_XDEBUG_START_WITH_REQUEST}
+xdebug.client_host=host.docker.internal
